# slutil

./: .gitignore  .slutil_job_history.csv  CHANGELOG.md  LICENSE.md  README.md  main.py  makefile  pyproject.toml  requirements.txt  submit.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: main.yml  pr.yml  publish_to_pypi.yml  release.yml
slutil/: CsvRepository.py  CsvUow.py  Record.py  abstract_repository.py  abstract_uow.py  fake_slurm.py  main.py  services.py  slurm.py
slutil/adapters/: abstract_repository.py  abstract_slurm_service.py  abstract_vcs.py  csv_repository.py  datetime_util.py  git.py  slurm.py
slutil/cli/: cmd_delete.py  cmd_edit.py  cmd_filter.py  cmd_hide.py  cmd_init.py  cmd_load.py  cmd_recent.py  cmd_report.py  cmd_search.py  cmd_status.py  cmd_submit.py  cmd_undelete.py  cmd_unhide.py  command_factory.py  formatter.py
slutil/model/: Record.py
slutil/services/: abstract_uow.py  csv_uow.py  dto.py  serialise_record.py  services.py
tests/: conftest.py  test_services.py  test_system.py
