[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slutil"
authors = [
    {name = "Eugene Prout", email = "eugene.prout1@gmail.com"},
]
description = "Command-line utility to view slurm jobs"
readme = "README.md"
requires-python = ">=3.7"

[tool.poetry]
name = "slutil"
authors = [
    "Eugene Prout <eugene.prout1@gmail.com>",
]
description = "Command-line utility to view slurm jobs"
version = "0.0.6"

[project.scripts]
slutil = "slutil.main:start_cli"

[tool.semantic_release]
version_variable = [
    "slutil/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
repository_url = "https://pypi.org/project/slutil/"
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}