[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slutil"
authors = [
    {name = "Eugene Prout", email = "eugene.prout1@gmail.com"},
]
description = "Command-line utility to view slurm jobs"
long_description_content_type='text/markdown'
readme = "README.md"
requires-python = ">=3.7"

[tool.poetry]
name = "slutil"
authors = [
    "Eugene Prout <eugene.prout1@gmail.com>",
]
description = "Command-line utility to view slurm jobs"
readme = "README.md"
version = "0.5.0"

[project.scripts]
slutil = "slutil.main:start_cli"

[tool.semantic_release]
version_variable = [
    "slutil/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_repository = false
remove_dist = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}