[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "slutil"
authors = [
    {name = "Eugene Prout", email = "eugene.prout1@gmail.com"},
]
description = "Command-line utility to view slurm jobs"
long_description_content_type='text/markdown'
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^13.3.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
black = "^23.1.0"

[tool.poetry]
name = "slutil"
authors = [
    "Eugene Prout <eugene.prout1@gmail.com>",
]
description = "Command-line utility to view slurm jobs"
readme = "README.md"
version = "0.5.2"

[tool.poetry.scripts]
slutil = "slutil.main:start_cli"

[tool.semantic_release]
version_variable = [
    "slutil/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_repository = false
remove_dist = false
upload_to_release = true
build_command = "pip install poetry && poetry build"